<resources>
    <string name="app_name">mvp example</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="go_to_sign_up">Go to Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error_email">Incorrect email</string>
    <string name="error_password">Incorrect password</string>
    <string name="error_password_length">Too short password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="enter_by_phone">Sign in by phone</string>
    <string name="enter_by_email">Sign in by email</string>
    <string name="send_code">Send code</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_code">Enter code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="tap_to_crash">TAP TO CRASH</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="to_profile">To profile</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_home">Home</string>
    <string name="title_game">Game</string>
    <string name="title_score">Score</string>
    <string name="title_action">Action</string>
    <string name="title_settings">Settings</string>
    <string name="to_graph">TO GRAPH</string>
    <string name="play">Play</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="exit">Exit</string>
    <string name="start">Start</string>

</resources>

