<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PhoneSignInFragment">

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:hint="@string/phone_number"/>

    <EditText
        android:id="@+id/et_code"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_code"/>

    <Button
        android:id="@+id/btn_send_code"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/send_code" />

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent"
        android:text="@string/sign_in" />
</LinearLayout>