<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EmailSignInFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_in"
        android:textSize="26sp"
        android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/sign_in" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:background="@null"
            android:text="@string/forget_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_to_sign_up"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:background="@null"
            android:text="@string/go_to_sign_up"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
